PMforce/src/objects/Question_Datas__c.object
<CustomObject>
    <fields>
        <fullName>AddQuestion__c</fullName>
        <label>Question Repository</label>
        <referenceTo>Question_Repository__c</referenceTo>
        <relationshipLabel>Question Data</relationshipLabel>
        <relationshipName>Question_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Option_1__c</fullName>
        <label>Option 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_2__c</fullName>
        <label>Option 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_3__c</fullName>
        <label>Option 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AddQuestion__c</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QD-{0000}</displayFormat>
        <label>Question Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>